unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/ET_Sales_Agreement_Sub_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Sales Agreement Line</label>
    <nameField>
        <displayFormat>SAL - {00000}</displayFormat>
        <label>Line Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Agreement Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>