unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Activity_Center__c.field-meta.xml
<CustomField>
    <fullName>Activity_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delete-Activity Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>