unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Allow_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Allow_Secondary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Secondary</label>
    <type>Checkbox</type>
</CustomField>