unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Amount_Calcualted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Calcualted__c</fullName>
    <label>Amount Calcualted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>