unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>