unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Assign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Assign_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assign Start Date</label>
    <type>Date</type>
</CustomField>