unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract End Date</label>
    <type>DateTime</type>
</CustomField>