unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Contract_Oracle_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Oracle_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Oracle Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>