unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Customer_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>