unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Driver_Count__c.field-meta.xml
<CustomField>
    <fullName>Driver_Count__c</fullName>
    <label>Driver Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>