unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Driver_No__c.field-meta.xml
<CustomField>
    <fullName>Driver_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Driver No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>