unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>