unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Excess_Km__c.field-meta.xml
<CustomField>
    <fullName>Excess_Km__c</fullName>
    <label>Excess Km</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>