unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Friday__c.field-meta.xml
<CustomField>
    <fullName>Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>