unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Fuel_Additional_Fees__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Additional_Fees__c</fullName>
    <label>Fuel Additional Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>