unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Fuel_Collection_Basis__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Collection_Basis__c</fullName>
    <label>Fuel Collection Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>