unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Fuel_Included__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Included__c</fullName>
    <label>Fuel Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>