unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Hours_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_Day__c</fullName>
    <label>Hours per Day</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>