unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Sales Agreement Lines</relationshipLabel>
    <relationshipName>Sales_Agreement_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>