unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Line_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Amount__c</fullName>
    <formula>Tax_Amount__c + Line_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>