unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Monday__c.field-meta.xml
<CustomField>
    <fullName>Monday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>