unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/No_of_Vehicles_Employee__c.field-meta.xml
<CustomField>
    <fullName>No_of_Vehicles_Employee__c</fullName>
    <label>No of Vehicles/Employee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>