unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <referenceTo>Option__c</referenceTo>
    <relationshipLabel>Sales Agreement Lines</relationshipLabel>
    <relationshipName>Sales_Agreement_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>