unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <label>Sales Agreement</label>
    <referenceTo>ET_Sales_Agreement__c</referenceTo>
    <relationshipLabel>Sales Agreement Lines</relationshipLabel>
    <relationshipName>Sales_Agreement_Sub_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>