unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Salik_YesNo__c.field-meta.xml
<CustomField>
    <fullName>Salik_YesNo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salik (Yes/No)</label>
    <type>Checkbox</type>
</CustomField>