unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Sales Agreement Lines</relationshipLabel>
    <relationshipName>Sales_Agreement_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>