unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Sub_Line__c.field-meta.xml
<CustomField>
    <fullName>Sub_Line__c</fullName>
    <label>Sub Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>