unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Traffic_Fine__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Fine__c</fullName>
    <label>Traffic Fines Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>