unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Vehicle_Description__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>