unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/fields/Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wednesday</label>
    <type>Checkbox</type>
</CustomField>