unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/recordTypes/ETSALES_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Vehicle</fullName>
    <active>true</active>
    <label>Delete Vehicle</label>
</RecordType>