unpackaged/main/default/objects/ET_Sales_Agreement_Sub_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activity_Center__c</columns>
    <columns>Location__c</columns>
    <columns>Contract_No__c</columns>
    <columns>Revision__c</columns>
    <columns>Customer__c</columns>
    <columns>Customer_PO_Number__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Contract_Status__c</columns>
    <columns>Sub_Line__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>